# test-atocha

./: .gitignore  Cargo.toml  LICENSE  README.md  SHA256SUMS  atochaSpec.json  chain-spec.json  start.dev.ws7781.sh  start.dev.ws9981.sh
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/atocha/: Cargo.toml  README.md
pallets/atocha/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
